# iced_sctk

./: Cargo.toml  flake.nix
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
sctk/: Cargo.toml
sctk/src/: clipboard.rs  conversion.rs  error.rs  layer.rs  lib.rs  proxy.rs  system.rs  window.rs
sctk/src/window/: state.rs
src/: error.rs  layer_shell.rs  lib.rs
